// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component should close the modal 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Modal Title
      </p>
      <button
        class="delete"
      />
    </header>
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should close the modal if clicked on background 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-content"
  >
    Content
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should close the modal on ESC key press 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Modal Title
      </p>
      <button
        class="delete"
      />
    </header>
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Card": Object {
    "$$typeof": Symbol(react.forward_ref),
    "Body": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "as": "section",
      },
      "render": [Function],
    },
    "Foot": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "as": "footer",
      },
      "render": [Function],
    },
    "Head": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "as": "header",
        "children": null,
        "showClose": true,
      },
      "render": [Function],
    },
    "Title": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "as": "p",
      },
      "render": [Function],
    },
    "render": [Function],
  },
  "Content": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
    },
    "render": [Function],
  },
  "render": [Function],
}
`;

exports[`Modal component should expose Content and Card's types 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
  },
  "render": [Function],
}
`;

exports[`Modal component should expose Content and Card's types 2`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Body": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "section",
    },
    "render": [Function],
  },
  "Foot": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "footer",
    },
    "render": [Function],
  },
  "Head": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "header",
      "children": null,
      "showClose": true,
    },
    "render": [Function],
  },
  "Title": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "p",
    },
    "render": [Function],
  },
  "render": [Function],
}
`;

exports[`Modal component should expose Content and Card's types 3`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "p",
  },
  "render": [Function],
}
`;

exports[`Modal component should expose Content and Card's types 4`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "header",
    "children": null,
    "showClose": true,
  },
  "render": [Function],
}
`;

exports[`Modal component should expose Content and Card's types 5`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "section",
  },
  "render": [Function],
}
`;

exports[`Modal component should expose Content and Card's types 6`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "footer",
  },
  "render": [Function],
}
`;

exports[`Modal component should not close the modal if clicked on background 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-content"
  >
    Content
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should not close the modal if clicked on background 2`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-content"
  >
    Content
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should not close the modal on ESC key press 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Modal Title
      </p>
      <button
        class="delete"
      />
    </header>
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should not close the modal on other than ESC key press 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Modal Title
      </p>
      <button
        class="delete"
      />
    </header>
    <section
      class="modal-card-body"
    >
      Body
    </section>
    <footer
      class="modal-card-foot"
    >
      Footer
    </footer>
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should not show close button 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-content"
  >
    Content
  </div>
</div>
`;

exports[`Modal component should not try to reopen if other prop change 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-content"
  >
    Content
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should open the modal 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div
    class="modal-card"
  >
    <header
      class="modal-card-head"
    >
      <p
        class="modal-card-title"
      >
        Modal Title
      </p>
      <button
        class="delete"
      />
    </header>
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should render any child type 1`] = `
<div
  class="modal is-active"
>
  <div
    class="modal-background"
    role="presentation"
  />
  <div>
    CHILDREN
  </div>
  <div>
    CHILDREN
  </div>
  <button
    aria-label="close"
    class="modal-close is-large"
    type="button"
  />
</div>
`;

exports[`Modal component should render empty because no document on scope 1`] = `""`;
